fix(ziro): active button text now visible in user's collection (#908)

--- a/Ziro/user.css
+++ b/Ziro/user.css
@@ -290,7 +290,8 @@
 /* tab bar */
 .oaNVBli46GtVjaQKB15g,
 .marketplace-tabBar-active,
-.lyrics-tabBar-active {
+.lyrics-tabBar-active,
+.queue-tabBar-active {
   color: var(--spice-shadow) !important;
   background: var(--spice-tab-active) !important;
 }
